--- a/libs/shared-ui/.eslintrc.json
+++ b/libs/shared-ui/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "showcaseApp",
+            "prefix": "showcaseWs",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "showcase-app",
+            "prefix": "showcase-ws",
             "style": "kebab-case"
           }
         ]
