--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@showcase-ws/shared-ui": ["libs/shared-ui/src/index.ts"]
+      "@showcase-ws/shared-ui": ["libs/shared-ui/src/index.ts"],
+      "@showcase-ws/shared-utils": ["libs/shared-utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
