music-player-lib: Implement UI barebones of music player .

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,7 +24,8 @@
       "@showcase-ws/music-player-data": ["libs/music-player-data/src/index.ts"],
       "@showcase-ws/music-player-lib": ["libs/music-player-lib/src/index.ts"],
       "@showcase-ws/shared-ui": ["libs/shared-ui/src/index.ts"],
-      "@showcase-ws/shared-utils": ["libs/shared-utils/src/index.ts"]
+      "@showcase-ws/shared-utils": ["libs/shared-utils/src/index.ts"],
+      "@showcase-ws/utils": ["libs/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
