--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nrwl/eslint-plugin-nx": "13.4.5",
     "@nrwl/jest": "13.4.5",
     "@nrwl/linter": "13.4.5",
+    "@nrwl/nest": "^13.5.1",
     "@nrwl/tao": "13.4.5",
     "@nrwl/workspace": "13.4.5",
     "@types/jest": "27.0.2",
