config: Implement basic nestjs server and hook to app

--- a/angular.json
+++ b/angular.json
@@ -383,7 +383,6 @@
       },
       "tags": []
     },
-   
     "showcase-app": {
       "projectType": "application",
       "root": "apps/showcase-app",
@@ -450,7 +449,10 @@
               "browserTarget": "showcase-app:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "apps/showcase-app/proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -506,7 +508,58 @@
       "tags": [],
       "implicitDependencies": ["showcase-app"]
     },
-   
+    "spotify-nestjs-app": {
+      "root": "apps/spotify-nestjs-app",
+      "sourceRoot": "apps/spotify-nestjs-app/src",
+      "projectType": "application",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/node:build",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/spotify-nestjs-app",
+            "main": "apps/spotify-nestjs-app/src/main.ts",
+            "tsConfig": "apps/spotify-nestjs-app/tsconfig.app.json",
+            "assets": ["apps/spotify-nestjs-app/src/assets"]
+          },
+          "configurations": {
+            "production": {
+              "optimization": true,
+              "extractLicenses": true,
+              "inspect": false,
+              "fileReplacements": [
+                {
+                  "replace": "apps/spotify-nestjs-app/src/environments/environment.ts",
+                  "with": "apps/spotify-nestjs-app/src/environments/environment.prod.ts"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/node:execute",
+          "options": {
+            "buildTarget": "spotify-nestjs-app:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "outputs": ["{options.outputFile}"],
+          "options": {
+            "lintFilePatterns": ["apps/spotify-nestjs-app/**/*.ts"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/spotify-nestjs-app"],
+          "options": {
+            "jestConfig": "apps/spotify-nestjs-app/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      },
+      "tags": []
+    },
     "utils": {
       "projectType": "library",
       "root": "libs/utils",
