--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nrwl/angular": "13.4.5",
+    "howler": "^2.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
@@ -50,6 +51,7 @@
     "@nrwl/node": "13.5.1",
     "@nrwl/tao": "13.4.5",
     "@nrwl/workspace": "13.4.5",
+    "@types/howler": "^2.2.4",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
