--- a/libs/e-commerce-lib/.eslintrc.json
+++ b/libs/e-commerce-lib/.eslintrc.json
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "e-commerce",
+            "prefix": "",
             "style": "kebab-case"
           }
         ]
