--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@ngrx/component-store": "~13.0.0",
+    "@ngrx/effects": "~13.0.0",
+    "@ngrx/entity": "~13.0.0",
+    "@ngrx/router-store": "~13.0.0",
+    "@ngrx/store": "~13.0.0",
     "@nrwl/angular": "13.4.5",
     "howler": "^2.2.3",
     "reflect-metadata": "^0.1.13",
@@ -42,6 +47,8 @@
     "@angular/language-service": "~13.1.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@ngrx/schematics": "~13.0.0",
+    "@ngrx/store-devtools": "~13.0.0",
     "@nrwl/cli": "13.4.5",
     "@nrwl/cypress": "13.4.5",
     "@nrwl/eslint-plugin-nx": "13.4.5",
@@ -61,6 +68,7 @@
     "eslint": "8.2.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "jasmine-marbles": "~0.9.1",
     "jest": "27.2.3",
     "jest-preset-angular": "11.0.0",
     "ng-packagr": "^13.0.0",
