--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@ngneat/elf": "^1.0.2",
+    "@ngneat/elf-devtools": "^1.2.0",
+    "@ngneat/elf-entities": "^3.1.0",
     "@ngrx/component-store": "~13.0.0",
     "@ngrx/effects": "~13.0.0",
     "@ngrx/entity": "~13.0.0",
