--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngneat/elf": "^1.0.2",
     "@ngneat/elf-devtools": "^1.2.0",
     "@ngneat/elf-entities": "^3.1.0",
+    "@ngneat/until-destroy": "^9.0.0",
     "@ngrx/component-store": "~13.0.0",
     "@ngrx/effects": "~13.0.0",
     "@ngrx/entity": "~13.0.0",
