project: Add Angular Three js schematics.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
+    "@angular-three/schematics": "^4.5.0",
     "@angular/cli": "~13.1.0",
     "@angular/compiler-cli": "~13.1.0",
     "@angular/language-service": "~13.1.0",
@@ -61,7 +62,7 @@
     "@nrwl/nest": "^13.5.1",
     "@nrwl/node": "13.5.1",
     "@nrwl/tao": "13.4.5",
-    "@nrwl/workspace": "13.4.5",
+    "@nrwl/workspace": "^13.8.4",
     "@types/howler": "^2.2.4",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
