--- a/libs/shared-ng-three/.eslintrc.json
+++ b/libs/shared-ng-three/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "showcaseApp",
+            "prefix": "sharedNgt",
             "style": "camelCase"
           }
         ],
@@ -21,6 +21,7 @@
           "error",
           {
             "type": "element",
+            "prefix": "shared-ngt",
             "style": "kebab-case"
           }
         ]
