--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-three/core": "^4.5.0",
+    "@angular-three/soba": "^4.5.0",
     "@angular/animations": "~13.2.5",
     "@angular/cdk": "^13.2.5",
     "@angular/common": "~13.2.5",
@@ -35,9 +37,11 @@
     "@ngrx/router-store": "~13.0.2",
     "@ngrx/store": "~13.0.2",
     "@nrwl/angular": "13.8.4",
+    "gsap": "^3.9.1",
     "howler": "^2.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.4",
+    "three": "^0.137.5",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.5"
   },
@@ -66,6 +70,7 @@
     "@types/howler": "^2.2.5",
     "@types/jest": "27.4.1",
     "@types/node": "17.0.21",
+    "@types/three": "^0.137.0",
     "@typescript-eslint/eslint-plugin": "~5.13.0",
     "@typescript-eslint/parser": "~5.13.0",
     "autoprefixer": "^10.4.2",
