--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
     "@nestjs/common": "^8.4.0",
     "@nestjs/core": "^8.4.0",
     "@nestjs/platform-express": "^8.4.0",
-    "@ngneat/elf": "^1.3.3",
+    "@ngneat/effects": "^1.0.0",
+    "@ngneat/effects-ng": "^1.0.0",
+    "@ngneat/elf": "^1.5.0",
+    "@ngneat/elf-cli-ng": "^1.0.0",
     "@ngneat/elf-devtools": "^1.2.0",
-    "@ngneat/elf-entities": "^3.3.0",
+    "@ngneat/elf-entities": "^3.4.0",
+    "@ngneat/elf-persist-state": "^1.1.1",
     "@ngneat/until-destroy": "^9.0.0",
     "@ngrx/component-store": "~13.0.2",
     "@ngrx/effects": "~13.0.2",
