--- a/angular.json
+++ b/angular.json
@@ -446,15 +446,19 @@
               "apps/showcase-app/src/assets"
             ],
             "styles": ["apps/showcase-app/src/styles.scss"],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "opentype.js"
+           ]
+            
           },
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1mb",
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
