--- a/package.json
+++ b/package.json
@@ -94,5 +94,12 @@
     "tailwindcss": "^3.0.23",
     "ts-jest": "27.1.3",
     "typescript": "~4.5.5"
+  },
+  "elf": {
+    "cli": {
+      "repoTemplate": "class",
+      "repoLibrary": "store",
+      "plugins": ["@ngneat/elf-cli-ng"]
+    }
   }
 }
