--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rxjs": "~7.5.4",
     "three": "^0.137.5",
     "tslib": "^2.3.1",
+    "unsplash-js": "^7.0.15",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
@@ -99,7 +100,9 @@
     "cli": {
       "repoTemplate": "class",
       "repoLibrary": "store",
-      "plugins": ["@ngneat/elf-cli-ng"]
+      "plugins": [
+        "@ngneat/elf-cli-ng"
+      ]
     }
   }
 }
