e-commerce: Implement base for app + code refactor.

--- a/angular.json
+++ b/angular.json
@@ -448,7 +448,7 @@
             "styles": ["apps/showcase-app/src/styles.scss"],
             "scripts": [],
             "allowedCommonJsDependencies": [
-              "opentype.js"
+              "opentype.js", "websocket"
            ]
             
           },
