--- a/package.json
+++ b/package.json
@@ -29,20 +29,18 @@
     "@nestjs/platform-express": "^8.4.0",
     "@ngneat/effects": "^1.0.0",
     "@ngneat/effects-ng": "^1.0.0",
-    "@ngneat/elf": "^1.5.0",
+    "@ngneat/elf": "^1.5.3",
     "@ngneat/elf-cli-ng": "^1.0.0",
     "@ngneat/elf-devtools": "^1.2.0",
     "@ngneat/elf-entities": "^3.4.0",
     "@ngneat/elf-persist-state": "^1.1.1",
+    "@ngneat/elf-requests": "^1.1.2",
     "@ngneat/until-destroy": "^9.0.0",
-    "@ngrx/component-store": "~13.0.2",
-    "@ngrx/effects": "~13.0.2",
-    "@ngrx/entity": "~13.0.2",
-    "@ngrx/router-store": "~13.0.2",
-    "@ngrx/store": "~13.0.2",
     "@nrwl/angular": "13.8.4",
+    "@supabase/supabase-js": "^1.31.1",
     "gsap": "^3.9.1",
     "howler": "^2.2.3",
+    "localforage": "^1.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.4",
     "three": "^0.137.5",
@@ -60,8 +58,6 @@
     "@angular/language-service": "~13.2.5",
     "@nestjs/schematics": "^8.0.7",
     "@nestjs/testing": "^8.4.0",
-    "@ngrx/schematics": "~13.0.2",
-    "@ngrx/store-devtools": "~13.0.2",
     "@nrwl/cli": "13.8.4",
     "@nrwl/cypress": "13.8.4",
     "@nrwl/eslint-plugin-nx": "13.8.4",
