--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "localforage": "^1.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.4",
+    "swiper": "^8.0.7",
     "three": "^0.137.5",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.5"
