--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ngneat/until-destroy": "^9.0.0",
     "@nrwl/angular": "13.8.4",
     "@supabase/supabase-js": "^1.31.1",
+    "firebase": "^9.6.10",
     "gsap": "^3.9.1",
     "howler": "^2.2.3",
     "localforage": "^1.10.0",
