--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/common": "~13.2.5",
     "@angular/compiler": "~13.2.5",
     "@angular/core": "~13.2.5",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.2.5",
     "@angular/material": "^13.2.5",
     "@angular/platform-browser": "~13.2.5",
